@@ -142,14 +142,36 @@ class GeoNamesJsonProvider(object):
                        term in voc(group=group)]
 
         continentCode = kwargs.get('continentCode', 'EU')
-        json = self.search(continentCode=continentCode,
+
+        # #14329 pan europe has countries also from Asia so we do a double
+        # search in order to get those countries as well
+        if group == 'pan-europe':
+            json_europe = self.search(continentCode='EU',
                            featureClass='A',
                            featureCode='PCLI')
-
-        if filters:
-            features = json['features']
-            json['features'] = [feature for feature in features
+            features_europe = json_europe['features']
+            json_europe['features'] = [feature for feature in features_europe
                                 if feature['properties']['name'] in filters]
+            json_asia = self.search(continentCode='AS',
+                                      featureClass='A',
+                                      featureCode='PCLI')
+            features_asia = json_asia['features']
+            json_asia['features'] = [feature for feature in features_asia
+                                   if feature['properties']['name'] in filters]
+
+            # extend json_europe with features from asia
+            json_europe['features'].extend(json_asia['features'])
+            json = json_europe
+
+        else:
+            json = self.search(continentCode=continentCode,
+                               featureClass='A',
+                               featureCode='PCLI')
+
+            if filters:
+                features = json['features']
+                json['features'] = [feature for feature in features
+                                    if feature['properties']['name'] in filters]
 
         # Fix country title
         for feature in json['features']:
@@ -195,7 +217,6 @@ class GeoNamesJsonProvider(object):
         query = kwargs.copy()
         query.setdefault('lang', 'en')
         query.setdefault('username', self.username)
-
         query = urllib.urlencode(query, doseq=1)
         try:
             conn = urllib2.urlopen(WEBSERVICE, query)
